# 42_Python_Piscine

./: .gitignore  README.md
pyhton02/ex0/: ft_first_exception.py
pyhton02/ex1/: ft_different_errory.py
pyhton02/ex2/: ft_custom_errors.py
pyhton02/ex3/: ft_finally_block.py
pyhton02/ex4/: ft_raise_errors.py
pyhton02/ex5/: ft_garden_management.py
python00/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py  ft_garden_summary.py  ft_harvest_total.py  ft_hello_garden.py  ft_plant_age.py  ft_plot_area.py  ft_seed_inventory.py  ft_water_reminder.py
python00/ex4/: ft_water_reminder.py
python00/ex5/: ft_count_harvest_recursive.py
python00/ex6/: ft_garden_summary.py
python01/: ft_garden_data.py
python01/ex0/: ft_garden_intro.py
python01/ex1/: ft_garden_data.py
python01/ex2/: ft_plant_growth.py
python01/ex3/: ft_plant_factory.py
python01/ex4/: ft_garden_security.py
python01/ex5/: ft_plants_types.py
python01/ex6/: ft_garden_analytics.py
python03/ex0/: ft_command_quest.py
python03/ex1/: ft_score_analytics.py
python03/ex2/: ft_coordinate_system.py
python03/ex3/: ft_achievement_tracker.py
python03/ex4/: ft_invetory_system.py
python03/ex5/: ft_data_stram.py  ft_data_stream.py
python03/ex6/: ft_analytics_dashboard.py
python04/data-generator-tools/: ancient_fragment.txt  sample_data.json
python04/ex0/: ft_ancient_text.py
python06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
python07/ex0/: Card.py  (+2 more)
python08/ex1/: construct.py  loading.py  pyproject.toml  requirements.txt
(+44 files in other folders)
