[tool.poetry]
name = "poetry_project"
version = "1.0"
description = ""
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11, <3.14"
pandas = "^3.0.1"
numpy = "^2.4.3"
matplotlib = "^3.10.8"
requests = "^2.32.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
